--- a/ThesisReport/reference.bib
+++ b/ThesisReport/reference.bib
@@ -44,7 +44,7 @@
   publisher={IEEE}
 }
 
-@article{azum01,
+@article{azuma01,
  title={Recent advances in augmented reality},
  author={Azuma, Ronald and Baillot, Yohan and Behringer, Reinhold and Feiner, Steven and Julier, Simon and MacIntyre, Blair},
  journal={Computer Graphics and Applications, IEEE},
@@ -142,18 +142,6 @@
   year = {2012},
   howpublished = "\url{http://www.cvlibs.net/datasets/kitti/eval_stereo_flow.php?benchmark=stereo }"
 }
-
-@article{azuma01,
-  title={Recent advances in augmented reality},
-  author={Azuma, Ronald and Baillot, Yohan and Behringer, Reinhold and Feiner, Steven and Julier, Simon and MacIntyre, Blair},
-  journal={Computer Graphics and Applications, IEEE},
-  volume={21},
-  number={6},
-  pages={34--47},
-  year={2001},
-  publisher={IEEE}
-}
-
 
 @book{hart2000,
   title={Multiple view geometry in computer vision},
@@ -297,7 +285,7 @@
 } 
 
 @article{dhon89,
- title={Structure from stereo-a review},
+ title={Structure from stereo - A review},
  author={Dhond, Umesh R and Aggarwal, Jake K},
  journal={Systems, Man and Cybernetics, IEEE Transactions on},
  volume={19},
@@ -387,14 +375,13 @@
  year={1986},
  publisher={IEEE}
 }
-
-@book{ritt96,
+@book{ritt00,
  title={Handbook of computer vision algorithms in image algebra},
- author={Ritter, Gerhard X and Wilson, Joseph N},
- volume={1},
- year={1996},
- publisher={Citeseer}
+ author={Wilson, Joseph N and Ritter, Gerhard X},
+ year={2000},
+ publisher={CRC press}
 }
+
 @phdthesis{hong10,
  title={A study of fast, robust stereo-matching algorithms},
  author={Hong, Wenxian},
@@ -426,4 +413,27 @@
   year={2006},
   publisher={BMJ Publishing Group Ltd.}
 }
+
+@article{wells86,
+  title={Efficient synthesis of Gaussian filters by cascaded uniform filters},
+  author={Wells, William M},
+  journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+  number={2},
+  pages={234--239},
+  year={1986},
+  publisher={IEEE}
+}
+
+@article{sobel78,
+ title={Neighborhood coding of binary images for fast contour following and general binary array processing},
+ author={Sobel, Irvin},
+ journal={Computer Graphics and Image Processing},
+ volume={8},
+ number={1},
+ pages={127--135},
+ year={1978},
+ publisher={Elsevier}
+}
+
+
 
